@@ -15,6 +15,7 @@ For users:
 - New: Can clone a commercial proposal.
 - New: Major enhancement of project module.
 - New: Added product label in invoice exports fields.
+- New: Add VAT number in export fields.
 - Fix: Save new model when changed on interventions.
 - Fix: Failed to go on the future view of bank transaction if there is no 
   future bank transaction already wrote.  
